--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.2",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/lab": "^6.0.0-beta.11",
+    "@mui/material": "^6.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.1",
